--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "src/speedcurve.js",
   "bin": "bin/speedcurve-deploy.js",
   "scripts": {
-    "build": "standard --fix",
-    "test": "standard"
+    "test": "prettier --write 'src/**/*.js'"
+  },
+  "prettier": {
+    "endOfLine": "lf",
+    "printWidth": 100,
+    "semi": false
   },
   "repository": {
     "type": "git",
@@ -25,6 +29,6 @@
     "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "standard": "^12.0.1"
+    "prettier": "^1.15.3"
   }
 }
