--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "src"
   ],
   "scripts": {
-    "preversion": "npm run test && npm run build",
+    "preversion": "npm run test && git diff-index --quiet HEAD",
+    "version": "npm run build",
     "postversion": "git push --tags || echo 'Failed to push latest tag. Please do it manually with git push --tags.'",
     "build": "npm run docs",
     "docs": "documentation build --github --format html --output docs/ src/index.js",
