--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speedcurve",
-  "version": "1.0.0-beta.12",
+  "version": "1.0.0",
   "description": "Official SpeedCurve CLI and Node.js API.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
