--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,9 @@ jobs:
             - run:
                 name: test
                 command: npm run test
+            - run:
+                name: npm-link
+                command: npm link
+            - run:
+                name: smoke-test
+                command: speedcurve --help
