--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "version": "npm run build && npm run commit-docs",
     "postversion": "git push origin master --tags || echo 'Failed to push latest tag. Please do it manually with git push origin master --tags.'",
     "clean": "rm -rfv docs/ dist/",
-    "build": "npm run clean && npm run tsc && npm run docs",
-    "tsc": "tsc",
-    "docs": "typedoc --name 'SpeedCurve Node.js API Reference' --readme api.md --hideGenerator --excludeExternals --exclude src/log.ts --out docs/ src/*.ts",
-    "commit-docs": "git add docs/ && git commit -m 'Build docs'",
-    "test": "npm run lint && npm run jest",
+    "test": "npm run check-src && npm run lint && npm run jest",
+    "build": "npm run clean && npm run compile-src && npm run docs",
     "watch": "tsc --watch",
+    "check-src": "tsc --noEmit",
+    "compile-src": "tsc",
     "lint": "npm run eslint && npm run eslint-test",
-    "eslint": "eslint --config .eslintrc-src.js --fix src/**/*.ts",
     "eslint-test": "eslint --config .eslintrc-test.js --fix __tests__/**/*.js",
-    "jest": "jest"
+    "eslint": "eslint --config .eslintrc-src.js --fix src/**/*.ts",
+    "jest": "jest",
+    "docs": "typedoc --name 'SpeedCurve Node.js API Reference' --readme api.md --hideGenerator --excludeExternals --exclude src/log.ts --out docs/ src/*.ts",
+    "commit-docs": "git add docs/ && git commit -m 'Build docs'"
   },
   "prettier": {
     "endOfLine": "lf",
@@ -42,7 +43,7 @@
   },
   "homepage": "https://github.com/wildlyinaccurate/speedcurve-deploy#readme",
   "dependencies": {
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.4",
     "@types/npmlog": "^4.1.1",
     "@types/request-promise-native": "^1.0.16",
     "@types/yargs": "^13.0.0",
@@ -61,6 +62,6 @@
     "prettier": "^1.17.1",
     "typedoc": "^0.14.2",
     "typedoc-plugin-external-module-name": "^2.1.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   }
 }
