--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "git+https://github.com/wildlyinaccurate/speedcurve-deploy.git"
   },
   "author": "SpeedCurve <support@speedcurve.com> (https://speedcurve.com/)",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wildlyinaccurate/speedcurve-deploy/issues"
   },
