--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "eslint --config .eslintrc-src.js --fix src/**/*.ts",
     "jest": "jest",
     "docs": "typedoc --name 'SpeedCurve Node.js API Reference' --readme api.md --hideGenerator --excludeExternals --exclude src/log.ts --out docs/ src/*.ts",
-    "commit-docs": "git add docs/ && git commit -m 'Build docs'"
+    "commit-docs": "git add docs/ && git commit -m 'Build docs' || echo 'No documentation changes to commit'"
   },
   "prettier": {
     "endOfLine": "lf",
