--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,5 @@ jobs:
                 name: test
                 command: npm run test
             - run:
-                name: npm-link
-                command: npm link
-            - run:
                 name: smoke-test
-                command: speedcurve --help
+                command: ./dist/cli/index.js --help
