Use tabs for better readability

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "prettier": {
     "endOfLine": "lf",
     "printWidth": 120,
-    "semi": false
+    "semi": false,
+    "useTabs": true
   },
   "repository": {
     "type": "git",
