--- a/package.json
+++ b/package.json
@@ -61,10 +61,9 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "typedoc": "^0.14.2",
-    "typedoc-plugin-external-module-name": "^2.2.1",
-    "typescript": "^3.7.5"
+    "typedoc": "^0.17.0-3",
+    "typescript": "^3.8.0-dev.20200128"
   }
 }
