--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
-    "typedoc": "^0.17.0",
+    "typedoc": "^0.17.0-3",
     "typescript": "^3.8.3"
   }
 }
