--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speedcurve",
-  "version": "1.1.0-dev",
+  "version": "1.1.0",
   "description": "Official SpeedCurve CLI and Node.js API.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
