--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
-        "target": "es6",
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "moduleResolution": "node",
         "alwaysStrict": true,
+        "declaration": true,
+        "esModuleInterop": true,
+        "module": "commonjs",
+        "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "outDir": "./dist",
         "strictBindCallApply": true,
-        "strictFunctionTypes": true
+        "strictFunctionTypes": true,
+        "target": "es6"
     },
     "include": [
         "./src/**/*"
