--- a/package.json
+++ b/package.json
@@ -52,20 +52,20 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.11.1",
     "@types/npmlog": "^4.1.1",
-    "@types/ramda": "^0.26.44",
-    "@types/request-promise": "^4.1.45",
+    "@types/ramda": "^0.27.3",
+    "@types/request-promise": "^4.1.46",
     "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
-    "coveralls": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "coveralls": "^3.0.11",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "typedoc": "^0.17.0-3",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.3.0",
+    "prettier": "^2.0.4",
+    "typedoc": "^0.17.4",
     "typescript": "^3.8.3"
   }
 }
