--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.3.0",
     "prettier": "^2.0.4",
-    "typedoc": "^0.17.4",
+    "typedoc": "^0.17.0-3",
     "typescript": "^3.8.3"
   }
 }
