Update dependencies and fix new ESLint errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./dist",
+        "resolveJsonModule": true,
         "strictBindCallApply": true,
         "strictFunctionTypes": true,
         "target": "es6"
