Run compile-src before tests; remove unused check-src

--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "version": "npm run build && npm run commit-docs",
     "postversion": "git push origin master --tags || echo 'Failed to push latest tag. Please do it manually with git push origin master --tags.'",
     "clean": "rm -rfv docs/ dist/",
-    "test": "npm run check-src && npm run lint && npm run jest",
+    "test": "npm run lint && npm run compile-src && npm run jest",
     "build": "npm run clean && npm run compile-src && npm run docs",
     "watch": "tsc --watch",
-    "check-src": "tsc --noEmit",
     "compile-src": "tsc",
     "lint": "npm run eslint && npm run eslint-test",
     "eslint-test": "eslint --fix '__tests__/**/*.test.js'",
