--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "eslint --fix 'src/**/*.ts'",
     "jest": "jest",
     "report-coverage": "cat coverage/lcov.info | coveralls && rm -rf coverage/",
-    "docs": "typedoc --name 'SpeedCurve Node.js API Reference' --out docs/ --readme api.md --mode library src/index.ts && touch docs/.nojekyll",
+    "docs": "typedoc && touch docs/.nojekyll",
     "commit-docs": "git add docs/ && git commit -m 'Build docs' || echo 'No documentation changes to commit'"
   },
   "prettier": {
@@ -48,23 +48,23 @@
     "ramda": "^0.27.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "yargs": "^16.0.2"
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.14.31",
     "@types/npmlog": "^4.1.1",
-    "@types/ramda": "^0.27.16",
-    "@types/request-promise": "^4.1.46",
-    "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@types/ramda": "^0.27.38",
+    "@types/request-promise": "^4.1.47",
+    "@types/yargs": "^15.0.13",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "coveralls": "^3.1.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
-    "prettier": "^2.1.1",
-    "typedoc": "^0.17.0-3",
-    "typescript": "^4.0.2"
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "typedoc": "^0.20.28",
+    "typescript": "^4.2.2"
   }
 }
