--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "ramda": "^0.27.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "yargs": "^16.2.0"
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/npmlog": "^4.1.1",
     "@types/ramda": "^0.27.38",
     "@types/request-promise": "^4.1.47",
-    "@types/yargs": "^15.0.13",
+    "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "coveralls": "^3.1.0",
@@ -61,7 +61,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^27.0.1",
     "prettier": "^2.2.1",
-    "typedoc": "^0.20.28",
-    "typescript": "^4.2.2"
+    "typedoc": "^0.21.0",
+    "typescript": "4.3"
   }
 }
