--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "eslint --fix 'src/**/*.ts'",
     "jest": "jest",
     "report-coverage": "cat coverage/lcov.info | coveralls && rm -rf coverage/",
-    "docs": "typedoc && touch docs/.nojekyll",
+    "docs": "typedoc",
     "commit-docs": "git add docs/ && git commit -m 'Build docs' || echo 'No documentation changes to commit'"
   },
   "prettier": {
@@ -41,7 +41,6 @@
   },
   "homepage": "https://github.com/SpeedCurve-Metrics/speedcurve-cli#readme",
   "dependencies": {
-    "npmlog": "^6.0.2",
     "ramda": "^0.28.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
@@ -60,8 +59,10 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.1.1",
+    "npmlog": "^7.0.1",
     "prettier": "^2.2.1",
-    "typedoc": "^0.21.0",
-    "typescript": "4.8"
+    "typedoc": "^0.23.24",
+    "typedoc-plugin-missing-exports": "^1.0.0",
+    "typescript": "^4.9.4"
   }
 }
